--- a/week1/ex1.1/index.html
+++ b/week1/ex1.1/index.html
@@ -2,12 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello world</title>
+    <title>Hello World</title>
 </head>
 <body>
-    <script>
-        const name = window.prompt("what is your name?");
-        console.log("Hello, " + name);
+    <script src="./main.js">
     </script>
+    
 </body>
 </html>
