--- a/week1/index.html
+++ b/week1/index.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P5JS</title>
+    <title>Hello world</title>
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-    <script src="./main.js">
+    <script>
+        const name = window.prompt("what is your name?");
+        console.log("Hello, " + name);
     </script>
-    
 </body>
 </html>
