--- a/week1/ex1.2/index.html
+++ b/week1/ex1.2/index.html
@@ -5,6 +5,9 @@
     <title>P5JS</title>
 </head>
 <body>
+    <style>
+        body {background-color: #7cd7e1;}
+    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <script src="./main.js">
     </script>
