--- a/week4/ex4.A/index.html
+++ b/week4/ex4.A/index.html
@@ -15,7 +15,7 @@
     <!-- <div class="target-div"></div> -->
     <!-- <button>Click here</button> -->
     <script src="https://cdn.jsdelivr.net/npm/p5"></script>
-    <!-- <script src="main.js"></script> -->
+    <script src="main.js"></script>
     
 </body>
 </html>
