--- a/week5/ex5.A/index.html
+++ b/week5/ex5.A/index.html
@@ -2,9 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Memroy Game</title>
 </head>
-<body>
+<h1>Marvel's Cards Game</h1>
+<body >
     <script src="https://cdn.jsdelivr.net/npm/p5"></script>
     <script src="memory-game.js"></script>
 </body>
