--- a/week12/ex12.A/index.html
+++ b/week12/ex12.A/index.html
@@ -8,17 +8,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
-
-
 </head>
 <body>
   <h1>Online Keyboard</h1>
-  <div class="keyboard">
-    <button class="key" id="key1">A</button>
-    <button class="key" id="key2">C</button>
-    <button class="key" id="key3">E</button>
+  <div id="canvas-container">
+    <script src="sketch.js"></script>
   </div>
-
-  <script src="sketch.js"></script>
 </body>
 </html>
